--- a/react/src/App.css
+++ b/react/src/App.css
@@ -2,60 +2,96 @@
   text-align: center;
 } */
 
-
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .custom-container {
-  max-width: 500px;
-  padding: 25px 25px;
-  margin: 75px auto;
-  background-color: #e6e6e661;
+    max-width: 500px;
+    padding: 25px 25px;
+    margin: 75px auto;
+    background-color: #e6e6e661;
 }
 
 .custom-bg-primary {
-  background-color: #007bff; /* Primary background color */
-  border-radius: 20px; /* Adjust the border-radius as needed */
-  padding: 10px 15px; /* Add padding to maintain button size */
-  color: #fff; /* Text color */
-  text-decoration: none; /* Remove underlines from the link */
+    background-color: #007bff;
+    /* Primary background color */
+    border-radius: 20px;
+    /* Adjust the border-radius as needed */
+    padding: 10px 15px;
+    /* Add padding to maintain button size */
+    color: #fff;
+    /* Text color */
+    text-decoration: none;
+    /* Remove underlines from the link */
 }
 
-.fixed-top{
-  position: fixed;
-  top:0;
-  width: 100%;
-  z-index: 1000;
+.fixed-top {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+table,
+th,
+td {
+    border: 1px solid #ccc;
+}
+
+th,
+td {
+    padding: 8px;
+    text-align: left;
+}
+
+
+/* Медийни заявки за респонсивност */
+
+@media (max-width: 600px) {
+    table {
+        font-size: 12px;
+        /* По-малък размер на шрифта за малки екрани */
+    }
+    th,
+    td {
+        padding: 4px;
+        /* По-малък отстъп за малки екрани */
+    }
 }
